tests/NormalTests/paczka1/fuzzy1/27997487.err
Error in line 1: DDKB6HEX7X S976 61,6
Error in line 2: DDKB6HEX7X A379 96,1
Error in line 6: DDKB6HEX7X S976 48,3
Error in line 21: JAVyONX S633 71,4
Error in line 23: DDKB6HEX7X S976 95,2
Error in line 25: DDKB6HEX7X S633 92,4
Error in line 24: Ovn S633 55,1
Error in line 22: JAVyONX S587 26,7
Error in line 33: JAVyONX A379 59,7
